# nevo-backend-2.0

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260702_0001_zero_tag_learner_profiles.py  20260702_0002_core_account_tables.py  20260702_0003_auth_sessions.py  20260703_0004_permissions.py  20260703_0005_teacher_class_assignments.py  20260704_0006_parent_consent.py  20260704_0007_ai_gateway.py  20260705_0008_signal_events.py  20260705_0009_lesson_sessions.py  20260706_0010_profile_channel_inference.py  (+5 more)
scripts/: render-build.sh  render-start.sh
tests/: __init__.py  test_ai_gateway_migration.py  test_ai_gateway_model_contract.py  test_attention_flag_migration.py  test_auth_migration.py  test_auth_model_contract.py  test_content_parsing_migration.py  test_content_parsing_model_contract.py  test_core_account_contract.py  test_core_account_migration.py  test_iep_export_migration.py  test_iep_export_model_contract.py  test_offline_migration.py  test_openapi_docs.py  test_parent_consent_migration.py  test_parent_consent_model_contract.py  test_permission_migration.py  test_permission_model_contract.py  test_post_lesson_profile_update_migration.py  test_profile_channel_migration.py  test_settings.py  test_signal_event_migration.py  test_signal_event_model_contract.py  test_sso_ask_nevo_migration.py  test_teacher_assignment_migration.py  test_teacher_assignment_model_contract.py  test_zero_tag_contract.py
(+221 files in other folders)
