[project]
name = "nevo-backend"
version = "2.0.0a1"
description = "Nevo learning platform backend"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Nevo Learning Limited" }
]
dependencies = [
    "alembic>=1.16,<2",
    "argon2-cffi>=25.1,<26",
    "asyncpg>=0.30,<1",
    "email-validator>=2.2,<3",
    "fastapi>=0.116,<1",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6.2,<7",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nevo = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a PostgreSQL database",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["nevo"]
